--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-rate-limit": "^7.4.1",
     "express-validator": "^7.2.0",
+    "helmet": "^8.0.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.11.4",
     "nodemailer": "^6.9.16",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "winston": "^3.17.0"
   }
 }
